Fix spacing error about section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1732,7 +1732,6 @@ input, select, textarea {
 	}
 
 	header.special {
-		margin-bottom: 5em;
 		padding-top: 7em;
 		position: relative;
 		text-align: center;
